tests/fixtures/invalid/round_str_int.py
# Cannot call round() with Str, Int
x = round("hello", 1)
